# hpc_flowtable

./: .gitignore  MiniProject_HPC_Flowtable.docx  README.md  meson.build  rules.cfg
docs/: README.md  app_defense_manual.md  cache_and_datapath_explained.md  current_architecture.md  current_optimization.md  defense_guide_current.md  docx_content.txt  flowcore_report_vietnamese.tex  flowcore_slides_vietnamese.tex  project_architecture.md  source_code_defense_guide.md  spi_rule_engine_design.md  test_coverage_current.md
include/: app_init.h  app_threads.h  common.h  flow_packet.h  flow_table.h  spi_engine.h  stats.h
pcap/: dynamic_traffic.py  fixed_packet_sweep_results.json  gen_aging_traffic.py  gen_stress_test.py  gen_traffic.py  generate_fixed_packet_sweep.py  generate_flow_sweep.py  net_pcap_sweep_results.json  run_fixed_packet_sweep.py  run_net_pcap_sweep.py  test_pcap.py
scripts/: benchmark.sh  hugepage.sh  pktgen_dynamic_traffic.lua  run_1m_flow.sh  run_app.sh  run_app_pktgen.sh  run_app_tcpreplay.sh  run_pkt_gen.sh
src/: app_init.c  dispatcher.c  flow_packet.c  flow_table.c  main  main.c  spi_engine.c  stats.c  stats_core.c  worker.c
tests/: README.md  flow_slot_lifecycle_tests.c  flow_table_overload_tests.c  flowcore_functional_tests.c  flowcore_test_lib.py  flowcore_unit_tests.c  generate_test_assets.py  run_functional_tests.py  run_performance_tests.py  test_strategy.md
